--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@
 }
 body{
   background-color: black;
+  /* height: 100vh; */
+  /* width:100vh; */
+  overflow-x: hidden;
+}
+#tasklist::-webkit-scrollbar{
+display:none;
 }
